<resources>
    <string name="app_name">ShoppingLists</string>

    <!-- variables for activity Add Product -->
    <string name="name">Name</string>
    <string name="product_name_hint">Product name</string>
    <string name="description">Description</string>
    <string name="description_hint">Your note</string>

    <!-- variables for recycler view -->
    <string name="delete">DELETE</string>
    <string name="info_deleted">removed from cart!</string>
    <string name="undo">undo</string>

    <!-- database consts -->
    <string name="shoppingLists" translatable="false">ShoppingLists</string>
    <string name="user_name">User name</string>
    <string name="user_name_default">User Name</string>
    <string name="user_name_key" translatable="false">user name key</string>
    <string name="action_settings">Settings</string>
    <string name="details_description">Note</string>
    <string name="details_name">Product name</string>
    <string name="details_name_hint">Product name</string>
    <string name="details_user">Added by</string>
    <string name="details_date">Created</string>
    <string name="add_list">Add list</string>
    <string name="add_list_alert_title">List name</string>
    <string name="dialog_list_name_hint">List name</string>


</resources>
